sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value i
do {i=0
    ^AlgGnomeSort:7: error: not found: value i
      if (!isSmaller(i,i+1)) {
                     ^AlgGnomeSort:7: error: not found: value i
      if (!isSmaller(i,i+1)) {
                       ^AlgGnomeSort:8: error: not found: value i
        swap(i,i+1)
             ^AlgGnomeSort:8: error: not found: value i
        swap(i,i+1)
               ^AlgGnomeSort:9: error: not found: value swapped
        swapped=true 
        ^AlgGnomeSort:10: error: not found: value i
        i+=1       
        ^AlgGnomeSort:12: error: not found: value i
  		else{i-=1}
                     ^AlgGnomeSort:15: error: not found: value i
  } while ((i>0)&&(i<getCountValue()))
            ^AlgGnomeSort:15: error: not found: value i
  } while ((i>0)&&(i<getCountValue()))
                   ^AlgGnomeSort:15: error: not found: value getCountValue
  } while ((i>0)&&(i<getCountValue()))
                     ^