sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  
do {i=0
  
    
      if (!isSmaller(i,i+1)) {
        swap(i,i+1)
        swapped=true 
        i+=1       
       }
  		else{i-=1}
       
    
  } while ((i>0)&&(i<getCountValue()))
  
}
